2008-11-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* version.sh: GraphicsMagick 1.2.6 released.
	* NEWS.txt: Updated news for release.

2008-11-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/jp2.c (BlobClose): Leak a little bit less memory when
	reading a JP2 file.
	* magick/effect.c (InitializeMedianList): Quench valgrind warning
	about use of uninitialized memory.
	* coders/msl.c: Backport implementation from CVS head.  Eliminates
	memory leaks and fixes gravity placement when performing
	composition.

2008-11-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* GraphicsMagick.spec.in: Apply RPM spec file fixes from Giacomo
	Tenaglia for Red Hat Linux 4.

2008-11-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/msl.c: Fix bug with attributes becoming appended to
	themselves.  Resolves SF issue 2255754.

2008-11-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: With excessive maintenance releases, the library
	age portion of MAGICK_LIB_VERSION was overflowing its allotted
	space.  This resulted in 1.1.X releases reporting the wrong
	MagickLibVersion as of 1.1.10.  Fix this by supporting up to 99
	values for each field.

2008-11-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Fix passing the --with-windows-font-dir option via
	DISTCHECK_CONFIG_FLAGS.
	* magick/command.c (ConjureImageCommand): Return status was
	inverted so one was returned for command success rather than zero.

2008-11-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/color.c (FuzzyColorMatch): If fuzz is zero then
	completely use the result of ColorMatch() rather than entering
	unnecessary expensive code.

2008-10-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Makefile.am: The Magick++ build was supposed to be optional. Now
	it is.

2008-10-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/pixel_cache.c (SetNexus): Make staging buffer memset()