@@ -24,6 +24,14 @@
 2008-11-17  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
+  <LI> utilities/tests/msl_composite.sh: Fix 'rm -f' without a valid
+        argument which annoyed NetBSD.
+
+</UL>
+<p>
+2008-11-17  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
   <LI> version.sh: GraphicsMagick 1.2.6 released.
   <LI> NEWS.txt: Updated news for release.
 
