@@ -1,5 +1,10 @@
 2008-11-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* utilities/tests/msl_composite.sh: Fix 'rm -f' without a valid
+	argument which annoyed NetBSD.
+
+2008-11-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
 	* version.sh: GraphicsMagick 1.2.6 released.
 	* NEWS.txt: Updated news for release.
 
